2000-02-02  Vadim Zaliva  <lord@crocodile.org>

	* stream.cpp (ProcessInputUnicode): better conversion error reporting.
	corrected problem with buffer underflow on last character.
	Better handling of end of input data while converting to Unicode.

	* option.cpp (nowrite): better handling of -encoding option when 
	compiled w/o ICU.

2000-02-01  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* java.g:  corrected "converting to Token" twice problem.
	which was causing crash compiling empty case statement with 
	empty default clause.

2000-01-18  Vadim Zaliva  <lord@crocodile.org>

	* stream.cpp (ProcessInputUnicode): buffer resize on surrogate
 	characters use more accurate memory allocation.

	* configure.in: check for wmemcpy added.

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* bytecode.cpp:
	* control.cpp:
	* lookup.cpp:
	* symbol.cpp:
	* symbol.h:
	* system.cpp: Debugging malloc libraries are marvelous things.
  	The attached patch fixes five small memory leaks and one instance
 	of delete given a null pointer (not actually incorrect, but bad
 	practice and something memory profiling tools complain heartily
 	about).

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* ast.cpp: Printing out ASTs involving for-statements may segfault
 	do to a swapped loop bound test.  You only see this if you have
 	more for-initialization expressions than for-update
 	expressions. Patch fixes this problem.

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* java.g (SwitchBlock): Fixed segfault when compiling certain
 	switch-statement constructs.

2000-01-13 C. Scott Ananian <cananian@alumni.princeton.edu>

	* configure.in: Fix compilation on libc5 based systems.
	
2000-01-14 C. Scott Ananian <cananian@alumni.princeton.edu>

       * option.cpp: Fixed an off-by-one error in a string
       allocation.  Debugging-malloc libraries are a
       Good Thing.
                                                          