@@ -1,3 +1,14 @@
+2000-02-03  Vadim Zaliva  <lord@crocodile.org>
+
+	* stream.cpp (ProcessInputUnicode): 
+	* option.cpp (Option): 
+	Using 'iconv' (if found) for encoding conversions.
+
+	* error.cpp (StaticInitializer): unsupported encoding is now treated 
+	as an error, not warning.
+
+	* configure.in: added check for 'iconv.h' header.
+
 2000-02-02  Vadim Zaliva  <lord@crocodile.org>
 
 	* stream.cpp (ProcessInputUnicode): better conversion error reporting.
